test/fails/bad_types/if_decl.lgl
void main() {
    bool b = false; 
    if (b) { 
        int x = 3;
    }
    else {
        int x = 4;
    }
    print x;
}